--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,10 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+{{head-layout}}
+<div class="container">
+  {{title "Leidinggevenden databank"}}
+	{{wu-widget src=header class="vo-header-widget"}}
+  {{#wu-content-header title="Leidinggevenden"}}
+    
+  {{/wu-content-header}}
+	{{outlet}}
+  {{wu-widget src=footer}}
+</div>
