added dummy route

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,4 @@
+{{!-- filter/wizard landing page here --}}
+<h1>wizard/filter/landing</h1>
+{{#link-to "bestuursorgaan.functionarissen" "dummy_id"}} ga naar overizicht functionarissen{{/link-to}}
 {{outlet}}
