--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,11 @@
-{{head-layout}}
+{{#unless isFastBoot}}
+  {{head-layout}}
+{{/unless}}
 <div class="container">
   {{title "Leidinggevenden databank"}}
-  {{wu-widget src=header class="vo-header-widget"}}
+
+  {{#unless isFastBoot}} {{wu-widget src=header class="vo-header-widget"}} {{/unless}}
+
   {{#wu-content-header title="Leidinggevenden"}}
 
   {{/wu-content-header}}
@@ -10,5 +14,5 @@
     {{outlet}}
   {{/with-rdfa-prefixes-and-vocab}}
 
-  {{wu-widget src=footer}}
+  {{#unless isFastBoot}} {{wu-widget src=footer}} {{/unless}}
 </div>
