Relayout landing page

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -17,127 +17,67 @@
 
                 <div class="col--4-12 col--6-12--m col--1-1--s col--1-1--xs">
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
-                    <header class="info-tile__header">
-                      <div class="info-tile__badge__wrapper">
-                        <div class="badge badge--m badge--icon badge--accent">
-                          <i class="badge__icon fa fa-building" aria-hidden="true"></i>
-                          <span class="u-visually-hidden">Type: bestuur</span>
-                        </div>
-                      </div>
-                      <div class="info-tile__header__wrapper">
-                        <h3 class="info-tile__header__title">Gemeente-<br>bestuur</h3>
-                        <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p>
-                        <a href="#bestuursorgaan" class="link--icon link--icon--caret">
-                          <i class="vi vi-arrow button__icon"></i>
-                          Selecteer bestuursorgaan
-                        </a>
-                      </div>
-                    </header>
+                    <h3 class="info-tile__header__title h5 u-spacer--tiny">Gemeente-<br>bestuur</h3>
+                    {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
+                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
+                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuursorgaan --}}
+                    {{!-- </a> --}}
                   </div>
                 </div>
 
                 <div class="col--4-12 col--6-12--m col--1-1--s col--1-1--xs">
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
-                    <header class="info-tile__header">
-                      <div class="info-tile__badge__wrapper">
-                        <div class="badge badge--m badge--icon badge--accent">
-                          <i class="badge__icon fa fa-building" aria-hidden="true"></i>
-                          <span class="u-visually-hidden">Type: bestuur</span>
-                        </div>
-                      </div>
-                      <div class="info-tile__header__wrapper">
-                        <h3 class="info-tile__header__title">Autonoom<br>gemeentebedrijf</h3>
-                        <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p>
-                        <a href="#bestuursorgaan" class="link--icon link--icon--caret">
-                          <i class="vi vi-arrow button__icon"></i>
-                          Selecteer bestuursorgaan
-                        </a>
-                      </div>
-                    </header>
+                    <h3 class="info-tile__header__title h5 u-spacer--tiny">Autonoom<br>gemeentebedrijf</h3>
+                    {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
+                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
+                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuursorgaan --}}
+                    {{!-- </a> --}}
                   </div>
                 </div>
 
                 <div class="col--4-12 col--6-12--m col--1-1--s col--1-1--xs">
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
-                    <header class="info-tile__header">
-                      <div class="info-tile__badge__wrapper">
-                        <div class="badge badge--m badge--icon badge--accent">
-                          <i class="badge__icon fa fa-building" aria-hidden="true"></i>
-                          <span class="u-visually-hidden">Type: bestuur</span>
-                        </div>
-                      </div>
-                      <div class="info-tile__header__wrapper">
-                        <h3 class="info-tile__header__title">OCMW-<br>vereniging</h3>
-                        <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p>
-                        <a href="#bestuursorgaan" class="link--icon link--icon--caret">
-                          <i class="vi vi-arrow button__icon"></i>
-                          Selecteer bestuursorgaan
-                        </a>
-                      </div>
-                    </header>
+                    <h3 class="info-tile__header__title h5 u-spacer--tiny">OCMW-<br>vereniging</h3>
+                    {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
+                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
+                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuursorgaan --}}
+                    {{!-- </a> --}}
                   </div>
                 </div>
 
                 <div class="col--4-12 col--6-12--m col--1-1--s col--1-1--xs">
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
-                    <header class="info-tile__header">
-                      <div class="info-tile__badge__wrapper">
-                        <div class="badge badge--m badge--icon badge--accent">
-                          <i class="badge__icon fa fa-building" aria-hidden="true"></i>
-                          <span class="u-visually-hidden">Type: bestuur</span>
-                        </div>
-                      </div>
-                      <div class="info-tile__header__wrapper">
-                        <h3 class="info-tile__header__title">Intergemeentelijk<br>samenwerkingsverband</h3>
-                        <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p>
-                        <a href="#bestuursorgaan" class="link--icon link--icon--caret">
-                          <i class="vi vi-arrow button__icon"></i>
-                          Selecteer bestuursorgaan
-                        </a>
-                      </div>
-                    </header>
+                    <h3 class="info-tile__header__title h5 u-spacer--tiny">Intergemeentelijk<br>samenwerkingsverband (IGS)</h3>
+                    {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
+                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
+                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuursorgaan --}}
+                    {{!-- </a> --}}
                   </div>
                 </div>
 
                 <div class="col--4-12 col--6-12--m col--1-1--s col--1-1--xs">
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
-                    <header class="info-tile__header">
-                      <div class="info-tile__badge__wrapper">
-                        <div class="badge badge--m badge--icon badge--accent">
-                          <i class="badge__icon fa fa-building" aria-hidden="true"></i>
-                          <span class="u-visually-hidden">Type: bestuur</span>
-                        </div>
-                      </div>
-                      <div class="info-tile__header__wrapper">
-                        <h3 class="info-tile__header__title">Provincie-<br>bestuur</h3>
-                        <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p>
-                        <a href="#bestuursorgaan" class="link--icon link--icon--caret">
-                          <i class="vi vi-arrow button__icon"></i>
-                          Selecteer bestuursorgaan
-                        </a>
-                      </div>
-                    </header>
+                    <h3 class="info-tile__header__title h5 u-spacer--tiny">Provincie-<br>bestuur</h3>
+                    {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
+                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
+                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuursorgaan --}}
+                    {{!-- </a> --}}
                   </div>
                 </div>
 
                 <div class="col--4-12 col--6-12--m col--1-1--s col--1-1--xs">
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
-                    <header class="info-tile__header">
-                      <div class="info-tile__badge__wrapper">
-                        <div class="badge badge--m badge--icon badge--accent">
-                          <i class="badge__icon fa fa-building" aria-hidden="true"></i>
-                          <span class="u-visually-hidden">Type: bestuur</span>
-                        </div>
-                      </div>
-                      <div class="info-tile__header__wrapper">
-                        <h3 class="info-tile__header__title">Autonoom<br>Provinciebedrijf (APB)</h3>
-                        <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p>
-                        <a href="#bestuursorgaan" class="link--icon link--icon--caret">
-                          <i class="vi vi-arrow button__icon"></i>
-                          Selecteer bestuursorgaan
-                        </a>
-                      </div>
-                    </header>
+                    <h3 class="info-tile__header__title h5 u-spacer--tiny">Autonoom<br>Provinciebedrijf (APB)</h3>
+                    {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
+                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
+                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuursorgaan --}}
+                    {{!-- </a> --}}
                   </div>
                 </div>
 
@@ -148,21 +88,22 @@
       </li>
       <li class="step step--no-box" id="bestuurorgaan">
         {{!-- {{unless werkingsgebied "step--disabled"}} --}}
-        <div class="step__icon">1</div>
+        <div class="step__icon">2</div>
         <div class="step__wrapper">
           <div class="step__header">
-            <h3 class="step__title">Stap 1: Kies een type bestuur</h3>
+            <h3 class="step__title">Stap 1: Kies een bestuursorgaan</h3>
           </div>
           <div class="step__content-wrapper">
             <div class="step__content">
-              <div class="u-spacer--tiny">
-                <div aria-owns="ember-basic-dropdown-content-ember10" tabindex="0" role="button" class="ember-power-select-trigger ember-basic-dropdown-trigger">
+              <div class="u-spacer--tiny ember-power-select--large">
+                <div role="button" class="ember-power-select-trigger ember-basic-dropdown-trigger">
                   <span class="ember-power-select-placeholder">Oost-Vlaanderen, Berchem, Hasselt, ...</span>
                   <span class="ember-power-select-status-icon"></span>
                 </div>
               </div>
-              {{#link-to "bestuursorgaan.functionarissen" "dummy_id" class="button button--large"}}
-                Kies bestuur
+              {{#link-to "bestuursorgaan.functionarissen" "dummy_id" class="button button--narrow button--large"}}
+                <i class="vi vi-arrow"></i>
+                Bekijk leidinggevenden van bestuursorgaan
               {{/link-to}}
             </div>
           </div>
