Remove another link from google

--- a/app/templates/bestuursorgaan/functionarissen.hbs
+++ b/app/templates/bestuursorgaan/functionarissen.hbs
@@ -176,7 +176,7 @@
 							<noscript>
 								<div class="map__static-card"><a href="https://maps.google.com?q=Koning%20Albert%20II-laan%2035%2C1030%20Brussel" target="_blank"><img target="_blank" src="" alt="" /></a></div>
 							</noscript>
-							<div class="map__interactive-card js-interactive-card" data-lat="50.8626661" data-lng="4.3591373"></div><a class="map__enlarge" href="https://maps.google.com?q=Koning%20Albert%20II-laan%2035%2C1030%20Brussel" target="_blank"><span class="u-hidden-text">View in google maps</span></a>
+							<div class="map__interactive-card js-interactive-card" data-lat="50.8626661" data-lng="4.3591373"></div><a class="map__enlarge" href="" target="_blank"><span class="u-hidden-text">View in google maps</span></a>
 						</div> --}}
 					</div>
 				</div>
