--- a/app/templates/bestuursorgaan/functionarissen.hbs
+++ b/app/templates/bestuursorgaan/functionarissen.hbs
@@ -49,22 +49,6 @@
             </a>
           </th>
 
-          <th class="u-visible--tablet-portrait-up sortable">
-            <a class="data-table__header-title--sortable">
-              Start {{!-- Discussie starten of dit relevant is voor de burgers --}}
-              <span class="u-visually-hidden">Aflopend sorteren</span>
-              <i class="data-table__header-title__sort-icon vi-u-link-after vi-u-180deg vi-long-arrow vi"></i>
-            </a>
-          </th>
-
-          <th class="u-visible--tablet-portrait-up sortable">
-            <a class="data-table__header-title--sortable">
-              Einde {{!-- Discussie starten of dit relevant is voor de burgers --}}
-              <span class="u-visually-hidden">Aflopend sorteren</span>
-              <i class="data-table__header-title__sort-icon vi-u-link-after vi-u-180deg vi-long-arrow vi"></i>
-            </a>
-          </th>
-
           <th class="u-visible--tablet-landscape-up">
             Contactgegevens
           </th>
@@ -89,12 +73,6 @@
           <td class="u-visible--tablet-portrait-up">
           	Waarnemend
           </td>
-          <td class="u-visible--tablet-landscape-up">
-          	07/01/2019
-          </td>
-          <td class="u-visible--tablet-portrait-up">
-          	<span class="text-fade">Onbepaald</span>
-          </td>
           <td class="u-visible--tablet-portrait-up">
             <p><a class="link--dark" href="mailto:mailadres.be">mailadres.be</a></p>
             <p>011 21 14 30</p>
@@ -114,10 +92,10 @@
       {{#contact-card as |c|}}
         {{#c.header}}Algemeen Directeur{{/c.header}}
         {{#c.content contactInfo=contactInfo as |content|}}
-          {{#content.row label="Aangesteld"}}
+          {{#content.row label="Waarnemend"}}
             <strong>Voornaam (of Roepnaam?) Familienaam</strong>
           {{/content.row}}
-          {{#content.row label="Waarnemend"}}
+          {{#content.row label="Aangesteld"}}
             <strong>Voornaam (of Roepnaam?) Familienaam</strong>
           {{/content.row}}
           {{!-- Discussie {{#content.row label="Contactpersoon"}}
@@ -130,18 +108,18 @@
       {{/contact-card}}
     </div>
 
-		<div class="contact-card">
+		<div class="contact-card u-spacer">
 			<header>
-				<h1 class="contact-card__title">Algemeen Directeur</h1>
+				<h1 class="contact-card__title">Algemeen Directeur met waarnemend</h1>
 			</header>
 			<div class="contact-card__content-wrapper">
 				<div class="contact-card__content grid">
 					<div class="col--6-12 col--1-1--s"> {{!-- contact-card__data --}}
 						<dl>
-							<dt class="contact-card__data__title">Aangesteld</dt>
-							<dd class="contact-card__data__content"><strong>Maria Proesmans</strong></dd>
 							<dt class="contact-card__data__title">Waarnemend</dt>
-							<dd class="contact-card__data__content"><strong>Jos Bynens</strong></dd>
+							<dd class="contact-card__data__content"><strong>Jos Bynens</strong> (contactpersoon)</dd>
+							<dt class="contact-card__data__title">Aangesteld</dt>
+							<dd class="contact-card__data__content">Maria Proesmans</dd>
 							<dt class="contact-card__data__title">Adres</dt>
 							<dd class="contact-card__data__content">
 								<div data-lat="50.8626661" data-lng="4.3591373">
@@ -170,14 +148,51 @@
 							</dd> --}}
 						</dl>
 					</div>
-					<div class="col--6-12 col--1-1--s u-background--gray-lightest">Map {{!-- contact-card__map  --}}
+					<div class="col--6-12 col--1-1--s u-background--gray-lightest">Map
+					</div>
+				</div>
+			</div>
+		</div>
 
-						{{!-- <div class="map">
-							<noscript>
-								<div class="map__static-card"><a href="https://maps.google.com?q=Koning%20Albert%20II-laan%2035%2C1030%20Brussel" target="_blank"><img target="_blank" src="" alt="" /></a></div>
-							</noscript>
-							<div class="map__interactive-card js-interactive-card" data-lat="50.8626661" data-lng="4.3591373"></div><a class="map__enlarge" href="" target="_blank"><span class="u-hidden-text">View in google maps</span></a>
-						</div> --}}
+		<div class="contact-card u-spacer">
+			<header>
+				<h1 class="contact-card__title">Algemeen Directeur zonder waarnemend</h1>
+			</header>
+			<div class="contact-card__content-wrapper">
+				<div class="contact-card__content grid">
+					<div class="col--6-12 col--1-1--s"> {{!-- contact-card__data --}}
+						<dl>
+							<dt class="contact-card__data__title">Aangesteld</dt>
+							<dd class="contact-card__data__content"><strong>Maria Proesmans</strong> (contactpersoon)</dd>
+							<dt class="contact-card__data__title">Adres</dt>
+							<dd class="contact-card__data__content">
+								<div data-lat="50.8626661" data-lng="4.3591373">
+									<div><span>Koning Albert II-laan 35 bus 12</span></div>
+									<div><span>1030</span> <span>Brussel</span></div>
+									<div><span>België</span></div>
+								</div>
+							</dd>
+							<dt class="contact-card__data__title">Telefoon</dt>
+							<dd class="contact-card__data__content"><a href="tel:+32 800 20 555">
+									0800
+									20 555</a></dd>
+							{{!-- <dt class="contact-card__data__title">Fax</dt> --}}
+							{{!-- <dd class="contact-card__data__content">02 553 38 69</dd> --}}
+							<dt class="contact-card__data__title">E-mail</dt>
+							<dd class="contact-card__data__content">
+								<ul>
+									<li><a href="mailto:info@agentschapondernemen.be">algemeendirecteur@aartselaar.be</a></li>
+								</ul>
+							</dd>
+{{!-- 							<dt class="contact-card__data__title">Website</dt>
+							<dd class="contact-card__data__content">
+								<ul>
+									<li><a href="http://www.agentschapondernemen.be">http://www.agentschapondernemen.be</a></li>
+								</ul>
+							</dd> --}}
+						</dl>
+					</div>
+					<div class="col--6-12 col--1-1--s u-background--gray-lightest">Map
 					</div>
 				</div>
 			</div>
