--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,6 +3,22 @@
 {{/wu-content-header}}
 <div class="region">
   <div class="layout layout--wide u-spacer--bottom--large" id="main">
+
+    <h2 class="h3 u-spacer">Bekijk de leidinggevenden in een bestuur</h2>
+    <h3 class="h5 u-spacer--tiny">Kies een bestuurseenheid</h3>
+    <p class="small u-spacer--tiny" style="max-width: 75rem;">Zoals een gemeentebestuur, autonoom gemeentebedrijf, OCMW-vereniging, intergemeentelijk samenwerkingsverband (IGS), provinciebestuur of autonoom provinciebedrijf (APB)</p>
+    <div class="u-spacer--tiny ember-power-select--large">
+      <div role="button" class="ember-power-select-trigger ember-basic-dropdown-trigger">
+        <span class="ember-power-select-status-icon"></span>
+      </div>
+    </div>
+    {{#link-to "bestuursorgaan.functionarissen" "dummy_id" class="button button--narrow button--large"}}
+      <i class="vi vi-arrow"></i>
+      Bekijk leidinggevenden van bestuurseenheid
+    {{/link-to}}
+
+    <div class="u-hr u-hr--label u-hr--label--centered u-spacer--tb--large"><span>of</span></div>
+
     <h2 class="h3 u-spacer">Bekijk de leidinggevenden in een bestuur</h2>
     <ul class="steps steps--has-line">
       <li class="step step--no-box">
@@ -19,9 +35,9 @@
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
                     <h3 class="info-tile__header__title h5 u-spacer--tiny">Gemeente-<br>bestuur</h3>
                     {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
-                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
-                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
-                      {{!-- Selecteer bestuursorgaan --}}
+                    <p><a href="#bestuurseenheid" class="link--icon link--icon--caret">Selecteer bestuurseenheid</a></p>
+                    {{!-- <a href="#bestuurseenheid" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuurseenheid --}}
                     {{!-- </a> --}}
                   </div>
                 </div>
@@ -30,9 +46,9 @@
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
                     <h3 class="info-tile__header__title h5 u-spacer--tiny">Autonoom<br>gemeentebedrijf</h3>
                     {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
-                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
-                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
-                      {{!-- Selecteer bestuursorgaan --}}
+                    <p><a href="#bestuurseenheid" class="link--icon link--icon--caret">Selecteer bestuurseenheid</a></p>
+                    {{!-- <a href="#bestuurseenheid" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuurseenheid --}}
                     {{!-- </a> --}}
                   </div>
                 </div>
@@ -41,9 +57,9 @@
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
                     <h3 class="info-tile__header__title h5 u-spacer--tiny">OCMW-<br>vereniging</h3>
                     {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
-                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
-                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
-                      {{!-- Selecteer bestuursorgaan --}}
+                    <p><a href="#bestuurseenheid" class="link--icon link--icon--caret">Selecteer bestuurseenheid</a></p>
+                    {{!-- <a href="#bestuurseenheid" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuurseenheid --}}
                     {{!-- </a> --}}
                   </div>
                 </div>
@@ -52,9 +68,9 @@
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
                     <h3 class="info-tile__header__title h5 u-spacer--tiny">Intergemeentelijk<br>samenwerkingsverband (IGS)</h3>
                     {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
-                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
-                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
-                      {{!-- Selecteer bestuursorgaan --}}
+                    <p><a href="#bestuurseenheid" class="link--icon link--icon--caret">Selecteer bestuurseenheid</a></p>
+                    {{!-- <a href="#bestuurseenheid" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuurseenheid --}}
                     {{!-- </a> --}}
                   </div>
                 </div>
@@ -63,9 +79,9 @@
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
                     <h3 class="info-tile__header__title h5 u-spacer--tiny">Provincie-<br>bestuur</h3>
                     {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
-                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
-                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
-                      {{!-- Selecteer bestuursorgaan --}}
+                    <p><a href="#bestuurseenheid" class="link--icon link--icon--caret">Selecteer bestuurseenheid</a></p>
+                    {{!-- <a href="#bestuurseenheid" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuurseenheid --}}
                     {{!-- </a> --}}
                   </div>
                 </div>
@@ -74,9 +90,9 @@
                   <div class="info-tile info-tile--badge--bottom info-tile--s">
                     <h3 class="info-tile__header__title h5 u-spacer--tiny">Autonoom<br>Provinciebedrijf (APB)</h3>
                     {{!-- <p class="info-tile__header__subtitle u-spacer--tiny">Korte omschrijving</p> --}}
-                    <p><a href="#bestuursorgaan" class="link--icon link--icon--caret">Selecteer bestuursorgaan</a></p>
-                    {{!-- <a href="#bestuursorgaan" class="button button--large button--alt button--alt--blue button--block"> --}}
-                      {{!-- Selecteer bestuursorgaan --}}
+                    <p><a href="#bestuurseenheid" class="link--icon link--icon--caret">Selecteer bestuurseenheid</a></p>
+                    {{!-- <a href="#bestuurseenheid" class="button button--large button--alt button--alt--blue button--block"> --}}
+                      {{!-- Selecteer bestuurseenheid --}}
                     {{!-- </a> --}}
                   </div>
                 </div>
@@ -91,7 +107,7 @@
         <div class="step__icon">2</div>
         <div class="step__wrapper">
           <div class="step__header">
-            <h3 class="step__title">Stap 1: Kies een bestuursorgaan</h3>
+            <h3 class="step__title">Stap 2: Kies een bestuurseenheid</h3>
           </div>
           <div class="step__content-wrapper">
             <div class="step__content">
@@ -103,7 +119,7 @@
               </div>
               {{#link-to "bestuursorgaan.functionarissen" "dummy_id" class="button button--narrow button--large"}}
                 <i class="vi vi-arrow"></i>
-                Bekijk leidinggevenden van bestuursorgaan
+                Bekijk leidinggevenden van bestuurseenheid
               {{/link-to}}
             </div>
           </div>
