Activate the 'Terug naar zoeken' link

--- a/app/templates/bestuursorgaan/functionarissen.hbs
+++ b/app/templates/bestuursorgaan/functionarissen.hbs
@@ -3,7 +3,9 @@
     <div class="grid">
       <div class="col--6-12">
         <a class="link--icon">
-          <small><i  class="vi-arrow vi-u-180deg vi"></i> Terug naar zoeken</small>
+          {{#link-to "index"}}
+            <small><i  class="vi-arrow vi-u-180deg vi"></i> Terug naar zoeken</small>
+          {{/link-to}}
         </a>
       </div>
     </div>
