Expose the bestuurseenheid to route and controller

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -16,7 +16,7 @@
         }}
       </div>
     </div>
-    {{#link-to "bestuursorgaan.functionarissen" bestuurseenheid class="button button--narrow button--large"}}
+    {{#link-to "bestuursorgaan.functionarissen" bestuurseenheid.id class="button button--narrow button--large"}}
       <i class="vi vi-arrow"></i>
       Bekijk leidinggevenden van bestuurseenheid
     {{/link-to}}
