Change the no-data prompt.

--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -35,7 +35,7 @@
       <tbody>
         <tr>
           <td class="u-align-center u-padding--round--small" colspan="6">
-            <p class="u-spacer--tiny">Geen functionaris voor {{bestuursfunctie.rol.label}} toegevoegd.</p>
+            <p class="u-spacer--tiny">Geen functionaris gevonden.</p>
           </td>
         </tr>
       </tbody>
